tests/lean/errorOnInductionForNested.lean.expected.out
errorOnInductionForNested.lean:7:2-7:14: error: The `induction` tactic does not support the type `LazyList` because it is a nested inductive type

Hint: Consider using the `cases` tactic instead
